fixed missing background gif

--- a/airline-web/public/stylesheets/main.css
+++ b/airline-web/public/stylesheets/main.css
@@ -5,7 +5,7 @@ body {
 	background: #abbaab;  /* fallback for old browsers */
 	//background: -webkit-linear-gradient(to bottom, #ffffff, #b8d5b8);  /* Chrome 10-25, Safari 5.1-6 */
 	//background: linear-gradient(to bottom, #ffffff, #b8d5b8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	background: linear-gradient(to bottom, rgba(40, 49, 77, 0.8) 30%, rgba(29, 35, 71, 0.8) 50%, rgba(19, 25, 28, 0.8) 80%, rgba(15, 14, 14, .8) 100%), url(../images/background/city.gif);
+	background: linear-gradient(to bottom, rgba(40, 49, 77, 0.8) 30%, rgba(29, 35, 71, 0.8) 50%, rgba(19, 25, 28, 0.8) 80%, rgba(15, 14, 14, .8) 100%), url(../images/background/city1.gif);
 	background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
